[gd_scene load_steps=20 format=2]

[ext_resource path="res://Level/Ressources/Vials/vial-jaune_1.png" type="Texture" id=1]
[ext_resource path="res://Level/Ressources/Vials/vial-jaune_5.png" type="Texture" id=2]
[ext_resource path="res://Level/Ressources/Vials/vial-jaune_3.png" type="Texture" id=3]
[ext_resource path="res://Level/Ressources/Vials/vial-jaune_4.png" type="Texture" id=4]
[ext_resource path="res://Level/Ressources/Vials/vial-jaune_7.png" type="Texture" id=5]
[ext_resource path="res://Level/Ressources/Vials/vial-jaune_8.png" type="Texture" id=6]
[ext_resource path="res://Level/Ressources/Vials/vial-jaune_9.png" type="Texture" id=7]
[ext_resource path="res://Level/Ressources/Vials/vial-jaune_10.png" type="Texture" id=8]
[ext_resource path="res://Level/Ressources/Vials/vial-jaune_2.png" type="Texture" id=9]
[ext_resource path="res://Level/Ressources/Vials/vial-jaune_6.png" type="Texture" id=10]
[ext_resource path="res://Level/Vial.gd" type="Script" id=11]
[ext_resource path="res://Sounds/vialreset4.wav" type="AudioStream" id=12]
[ext_resource path="res://Sounds/vial.wav" type="AudioStream" id=13]
[ext_resource path="res://Sounds/gameover.wav" type="AudioStream" id=14]
[ext_resource path="res://Fonts/Pixeboy-LARGE.ttf" type="DynamicFontData" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 9 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 10 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 275 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 15 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[node name="Vial" type="Node2D"]
script = ExtResource( 11 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -1, 0 )
scale = Vector2( 10, 10 )
frames = SubResource( 1 )
speed_scale = 0.2

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 203 )
shape = SubResource( 2 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = 100.0
margin_right = 16.0
margin_bottom = 7.5
theme = SubResource( 4 )
align = 1

[node name="Vial" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="VialReset" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="GameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
